# cookbook

./: .bookmarks  .gitignore  .shopping_list.txt  Alina's Basket.cook  CLAUDE.md  COOK.md  Fruit Basket III.cook  Kitchenware.cook  README.md  README.txt  Snack Basket I.cook  Snack Basket II.cook  Курица по-французски.cook
.obsidian/: workspace.json
Baking/: Brazilian Cheese Bread.cook  Napoleon.cook  Nut roll.cook  Tarte tatin.cook  Vegetable samosas.cook  Zapekanka.cook  Zebra Cake.cook
Breakfast/: Draniki.cook  Easy Pancakes.cook  French Breakfast.cook  Irish Breakfast.cook  Mexican Style Burrito.cook  Shakshuka.cook  Sirniki.cook  Smoothie bowl.cook
Components/: Beans.cook  Dumplings Dough.cook  Guacamole.cook  Neapolitan Pizza Dough.cook
Dinners/: Carbonara.cook  Checken Mustard.cook  Chicken French.cook  Crispy & sticky chicken thighs with squashed new potatoes & tomatoes.cook  Fried Rice.cook  Greek Chicken Souvlaki Bowl.cook  Güveç.cook  Pasta with prawn and courgette.cook  Pelmeni.cook  Seafood paella.cook  Sicilian-style Scottadito Lamb Chops.cook  Stuffed Peppers.cook  Uzbek Lagman.cook  Uzbek Manti.cook  Uzbek Plov.cook  Фаршированные перцы.cook
Freezable/: Kotletter.cook  Kotletters.cook  Meatballs.cook  Pelmeni.cook  Uzbek Manti.cook
French/: Beef Bourguignon.cook  Coq au Vin.cook
Fun/: Adjarian khachapuri.cook  Khinkali.cook  Moules marinière with cream, garlic and parsley.cook  Neapolitan Pizza.cook  (+5 more)
shop-automation/: .env.example  .gitignore  Cargo.toml  README.md
shop-automation/src/: main.rs  models.rs  scraper.rs  shopper.rs
(+212 files in other folders)
