[package]
name = "shop-automation"
version = "0.1.0"
edition = "2024"

[dependencies]
headless_chrome = "1.0"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
dotenv = "0.15"
dirs = "5.0"
